# LongRAG

./: README.md  flake.nix  pyproject.toml
exp/: nq_claude_3.5_sonnet.json  nq_gemini_100.json
scripts/: run_eval_qa.sh
src/eval/: eval_qa.py
src/utils/: claude_inference.py  gemini_inference.py
