[project]
name = "longrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic==0.28.1",
  "datasets==2.19.1",
  "google-generativeai==0.5.4",
  "huggingface-hub==0.23.0",
  "openai==1.14.2",
  "tiktoken==0.6.0",
  "transformers==4.38.1",
]
