[project]
name = "longrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic==0.45.1",
  "datasets==3.2.0",
  "google-generativeai==0.5.4",
  "httpx==0.27.2",
  "huggingface-hub==0.27.1",
  "openai==1.60.1",
  "python-dotenv==1.0.1",
  "tiktoken==0.8.0",
  "transformers==4.38.1",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/eval"]

# [project.scripts]
# longrag = "eval.eval_qa"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
